add some content to pc and cgv pages

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello BlogController!{% endblock %}
+{% block head %}
+<meta name="robots" content="follow, index">
+<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+{% endblock %}
 
 {% block body %}
 <!-- ======= Header ======= -->
