--- a/templates/connexion/index.html.twig
+++ b/templates/connexion/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Connexion{% endblock %}
 {% block head %}
-
+<meta name="robots" content="nofollow, noindex">
 {% endblock %}
 
 {% block body %}
