--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,9 +3,8 @@
 {% block title %}Contact{% endblock %}
 
 {% block head %}
-<title>Contact</title>
-<meta content="" name="description">
-<meta content="" name="keywords">
+<meta name="robots" content="follow, index">
+<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
 {% endblock %}
 
 {% block body %}
