--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}Inscription{% endblock %}
 {% block head %}
-
+<meta name="robots" content="nofollow, noindex">
 {% endblock %}
 
 {% block body %}
