--- a/public/assets/css/sign-in.css
+++ b/public/assets/css/sign-in.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   height: 100%;
 }
@@ -30,4 +30,4 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
