--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AboutController!{% endblock %}
-
+{% block title %}A Propos{% endblock %}
+{% block head %}
+<meta name="robots" content="follow, index">
+<meta name="keywords" content="Mot-clé 1, Mot-clé 2, Mot-clé 3">
+<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+{% endblock %}
 {% block body %}
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
