--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -54,7 +54,7 @@
         <h2>About Us</h2>
         <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
       </div>
-    </div><!-- End Breadcrumbs -->
+    </div><!-- bonjour zbdellah -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
