--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
+<html lang="fr" data-bs-theme="auto">
 <html>
 
 <head>
@@ -40,7 +40,46 @@
 </head>
 
 <body>
+    {% block header %}
+        <!-- ======= Header ======= -->
+        <header id="header" class="fixed-top">
+            <div class="container d-flex align-items-center">
+            <h1 class="logo me-auto"><a href="{{path('app_home')}}">ThéTipTop</a></h1>
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+            <nav id="navbar" class="navbar order-last order-lg-0">
+                <ul>
+                <li><a {% if app.request.attributes.get('_route') == 'app_home' %}class="active"{% endif %} href="{{path('app_home')}}">{{ 'Home' | trans }}</a></li>
+                <li><a {% if app.request.attributes.get('_route') == 'app_about' %}class="active"{% endif %} href="{{path('app_about')}}">{{'About'|trans}}</a></li>
+                <li><a {% if app.request.attributes.get('_route') == 'app_contact' %}class="active"{% endif %} href="{{path('app_contact')}}">{{'Contact'|trans}}</a></li>
+                </ul>
+                <i class="bi bi-list mobile-nav-toggle"></i>
+            </nav><!-- .navbar -->
+            <a href="{{path('app_connexion')}}" class="get-started-btn">{{'Account'|trans}}</a>
+            </div>
+        </header><!-- End Header -->
+        {# <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+                <li><a href="#">Drop Down 1</a></li>
+                <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                    <ul>
+                        <li><a href="#">Deep Drop Down 1</a></li>
+                        <li><a href="#">Deep Drop Down 2</a></li>
+                        <li><a href="#">Deep Drop Down 3</a></li>
+                        <li><a href="#">Deep Drop Down 4</a></li>
+                        <li><a href="#">Deep Drop Down 5</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Drop Down 2</a></li>
+                <li><a href="#">Drop Down 3</a></li>
+                <li><a href="#">Drop Down 4</a></li>
+            </ul>
+        </li> #}
+    {% endblock %}
     {% block body %}{% endblock %}
+    {% block footer %}
+    
+    {% endblock %}
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
